--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 
 <body>
   	<p>[<a href="#" onMouseOver="highlight()" onMouseOut="return_normal()">On mouse over here bold words of the following paragraph will be highlighted</a>]</p> 
-	<p><strong id="b">AccioJob</strong> is an <strong id="b">ed-tech startup</strong> run by IIT Delhi Alumni that provides a comprehensive state-of-the-art learning platform for <strong id="b">Full Stack Web Development</strong>. Our industry-relevant curriculum is taught by top tech instructors and mentors, and our students have gone on to work at leading tech companies like <strong id="b">Amazon</strong>, <strong id="b">Salesforce</strong>, and <strong id="b">Walmart</strong>, among others. With job placement opportunities at <strong id="b">300+</strong> top tech partner companies, we have placed <strong id="b">1000+</strong> students in 2022 itself at an average salary of <strong id="b">8.3 LPA</strong></p>
+	<p><strong>AccioJob</strong> is an <strong>ed-tech startup</strong> run by IIT Delhi Alumni that provides a comprehensive state-of-the-art learning platform for <strong>Full Stack Web Development</strong>. Our industry-relevant curriculum is taught by top tech instructors and mentors, and our students have gone on to work at leading tech companies like <strong>Amazon</strong>, <strong>Salesforce</strong>, and <strong>Walmart</strong>, among others. With job placement opportunities at <strong>300+</strong> top tech partner companies, we have placed <strong>1000+</strong> students in 2022 itself at an average salary of <strong>8.3 LPA</strong></p>
 
     <script type="text/javascript" src="./script.js">
 </script>
